--- a/project-one.html
+++ b/project-one.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Langar&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Match Game!</title>
@@ -8,30 +13,208 @@
   </head>
 
   <body>
-    <div id="header">
-      <h1>Welcome to the Match Game!</h1>
-      <h2>Match any two cards</h2>
-    </div>
+    <h1>Welcome to the Match Game!</h1>
+    <button class="start-game">Start Game</button>
 
-    <div>
-      <button>Start Game</button>
+    <section id="card-deck">
+      <div class="card" data-id="1">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="1">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="2">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="2">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="3">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="3">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="4">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="4">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="5">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="5">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="6">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+      <div class="card" data-id="6">
+        <img
+          class="card-front"
+          src="./images/apple.png"
+          alt="apple"
+          width="100"
+          height="100"
+        />
+        <img
+          class="card-back"
+          src="./images/banana.jpeg"
+          alt="banana"
+          width="100"
+          height="100"
+        />
+      </div>
+    </section>
+    <div class="game-content">
+      <span class="timer">Timer</span>
+      <span class="score">Score</span>
     </div>
-
-    <div id="cards">
-      <div class="one">1</div>
-      <div class="two">2</div>
-      <div class="three">3</div>
-      <div class="four">4</div>
-      <div class="five">5</div>
-      <div class="six">6</div>
-      <div class="seven">7</div>
-      <div class="eight">8</div>
-      <div class="nine">9</div>
-      <div class="ten">10</div>
-      <div class="eleven">11</div>
-      <div class="twelve">12</div>
-    </div>
-
-    <script src="project-one.js"></script>
+    <div class="Reset">Reset</div>
+    <script src="project12.js"></script>
   </body>
 </html>
