--- a/project-one.html
+++ b/project-one.html
@@ -215,6 +215,6 @@
       <span class="score">Score</span>
     </div>
     <div class="Reset">Reset</div>
-    <script src="project12.js"></script>
+    <script src="project-one.js"></script>
   </body>
 </html>
