--- a/project-one.html
+++ b/project-one.html
@@ -27,7 +27,7 @@
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -43,7 +43,7 @@
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -52,14 +52,14 @@
       <div class="card" data-id="2">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/grapes.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -68,14 +68,14 @@
       <div class="card" data-id="2">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/grapes.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -84,14 +84,14 @@
       <div class="card" data-id="3">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/mango.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -100,14 +100,14 @@
       <div class="card" data-id="3">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/mango.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -116,14 +116,14 @@
       <div class="card" data-id="4">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/pomegranate.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -132,14 +132,14 @@
       <div class="card" data-id="4">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/pomegranate.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -148,14 +148,14 @@
       <div class="card" data-id="5">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/pineapple.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -164,14 +164,14 @@
       <div class="card" data-id="5">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/pineapple.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -180,14 +180,14 @@
       <div class="card" data-id="6">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/banana.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
@@ -196,23 +196,24 @@
       <div class="card" data-id="6">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/banana.jpeg"
           alt="apple"
           width="100"
           height="100"
         />
         <img
           class="card-back"
-          src="./images/banana.jpeg"
+          src="./images/card.jpg"
           alt="banana"
           width="100"
           height="100"
         />
       </div>
     </section>
+    <h1 class="game-over-message">Game over! Your score is: <span class="endscore"></span></h1>
     <div class="game-content">
-      <span class="timer">Timer</span>
-      <span class="score">Score</span>
+      Timer:<span class="timer"></span>
+      Score:<span class="score">0</span>
     </div>
     <div class="Reset">Reset</div>
     <script src="project-one.js"></script>
