--- a/project-one.html
+++ b/project-one.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Langar&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Match Game!</title>
@@ -13,209 +10,211 @@
   </head>
 
   <body>
-    <h1>Welcome to the Match Game!</h1>
+    <h1>bob's burgers matchup</h1>
+    <div class="game-content">
+      Timer:<span class="timer"></span>
+      Score:<span class="score">0</span>
+    </div>
     <button class="start-game">Start Game</button>
 
     <section id="card-deck">
       <div class="card" data-id="1">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/teddy.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="1">
         <img
           class="card-front"
-          src="./images/apple.png"
+          src="./images/teddy.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="2">
         <img
           class="card-front"
-          src="./images/grapes.jpeg"
+          src="./images/louise.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="2">
         <img
           class="card-front"
-          src="./images/grapes.jpeg"
+          src="./images/louise.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="3">
         <img
           class="card-front"
-          src="./images/mango.jpeg"
+          src="./images/tina.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="3">
         <img
           class="card-front"
-          src="./images/mango.jpeg"
+          src="./images/tina.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="4">
         <img
           class="card-front"
-          src="./images/pomegranate.jpeg"
+          src="./images/linda.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="4">
         <img
           class="card-front"
-          src="./images/pomegranate.jpeg"
+          src="./images/linda.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="5">
         <img
           class="card-front"
-          src="./images/pineapple.jpeg"
+          src="./images/bob.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="5">
         <img
           class="card-front"
-          src="./images/pineapple.jpeg"
+          src="./images/bob.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="6">
         <img
           class="card-front"
-          src="./images/banana.jpeg"
+          src="./images/gene2.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
       <div class="card" data-id="6">
         <img
           class="card-front"
-          src="./images/banana.jpeg"
+          src="./images/gene2.jpg"
           alt="apple"
           width="100"
-          height="100"
+          height="200"
         />
         <img
           class="card-back"
-          src="./images/card.jpg"
+          src="./images/bobcardd.jpg"
           alt="banana"
           width="100"
-          height="100"
+          height="200"
         />
       </div>
     </section>
+    
     <h1 class="game-over-message">Game over! Your score is: <span class="endscore"></span></h1>
-    <div class="game-content">
-      Timer:<span class="timer"></span>
-      Score:<span class="score">0</span>
-    </div>
-    <div class="Reset">Reset</div>
+    <h1 class="you-won-message">Congratulations! You've successfully matched all cards!</h1>
+  
     <script src="project-one.js"></script>
   </body>
 </html>
